<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_item_days"
        android:layout_width="@dimen/dp_70"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/suggest_item_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_item_date" />

    <TextView
        android:id="@+id/text_item_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/suggest_time"
        android:textSize="@dimen/sp_13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_item_name"
        app:layout_constraintTop_toBottomOf="@+id/text_item_name" />

    <TextView
        android:id="@+id/text_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/suggest_item_name"
        android:textSize="@dimen/sp_19"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_item_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_item_date"
        android:layout_width="@dimen/dp_70"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:text="@string/suggest_item_date"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_item_name" />

    <TextView
        android:id="@+id/text_item_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/suggest_item_status"
        app:layout_constraintEnd_toEndOf="@+id/text_item_name"
        app:layout_constraintStart_toEndOf="@+id/text_item_days"
        app:layout_constraintStart_toStartOf="@+id/text_item_time"
        app:layout_constraintTop_toBottomOf="@+id/text_item_time" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#c4c4c4"
        android:layout_marginTop="@dimen/margin_all_8dp"
        app:layout_constraintEnd_toEndOf="@+id/text_item_name"
        app:layout_constraintStart_toStartOf="@+id/text_item_name"
        app:layout_constraintTop_toBottomOf="@+id/text_item_status" />
</androidx.constraintlayout.widget.ConstraintLayout>
